k8s/nextcloud/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud
  namespace: nextcloud
  labels:
    app: nextcloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nextcloud
  strategy:
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: nextcloud
    spec:
      containers:
        - image: lscr.io/linuxserver/nextcloud:34.0.2-ls444
          name: nextcloud
          ports:
            - containerPort: 443
              name: https
              protocol: TCP
            - containerPort: 80
              name: http
              protocol: TCP
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              cpu: "2"
              memory: 2Gi
          volumeMounts:
            - mountPath: /config
              name: nextcloud
              subPath: config
            - mountPath: /data
              name: nextcloud
              subPath: data
      volumes:
        - name: nextcloud
          persistentVolumeClaim:
            claimName: nextcloud-opt-server-claim
