k8s/nextcloud/statefulset.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: nextcloud-db
  namespace: nextcloud
  labels:
    app: nextcloud-db
spec:
  serviceName: nextcloud-db-service
  replicas: 1
  selector:
    matchLabels:
      app: nextcloud-db
  template:
    metadata:
      labels: 
        app: nextcloud-db
    spec:
      terminationGracePeriodSeconds: 1800
      containers:
        - name: nextcloud-mariadb
          image: linuxserver/mariadb:11.4.12-r0-ls224
          resources:
            requests:
              cpu: 100m
              memory: 512Mi
            limits:
              cpu: "2"
              memory: 2Gi
          ports:
            - containerPort: 3306
          #args:
          #  - --transaction-isolation=READ-COMMITTED
          #  - --binlog-format=ROW
          #  - --max-connections=1000
          volumeMounts:
            - name: nextcloud-db-storage
              mountPath: /config
              subPath: mariadb-config
      volumes:
        - name: nextcloud-db-storage
          persistentVolumeClaim:
            claimName: nextcloud-opt-claim
