k8s/nextcloud/service-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-db-service
  namespace: nextcloud
  labels:
    app: nextcloud-db-service
    kubernetes.io/name: "nextcloud-db-service"
spec:
  selector:
    pod-label: nextcloud-db-pod
  ports:
    - name: mysql
      protocol: TCP
      port: 3306
      nodePort: 30015
